--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "cloudo-storix-backend",
   "version": "1.0.0",
-  "description": "this is my first project",
-  "main": "index.js",
+  "description": "API-first secure cloud storage backend",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "dev": "nodemon src/server.js",
+  "start": "node src/server.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "repository": {
     "type": "git",
     "url": "git@github-cloudo:akashmadan501/cloudo-storix-backend.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["cloud", "storage", "api"],
+  "author": "Akash Madan",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
