Add env validation and MongoDB connection

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
+# Server configuration
 PORT=4000
+
+# Database configuration
+MONGO_URI=mongodb://127.0.0.1:27017/cloudo_storix
+
+# Environment
+NODE_ENV=development
