--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "API-first secure cloud storage backend",
   "main": "src/server.js",
   "scripts": {
-  "dev": "nodemon src/server.js",
-  "start": "node src/server.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git@github-cloudo:akashmadan501/cloudo-storix-backend.git"
   },
-  "keywords": ["cloud", "storage", "api"],
+  "keywords": [
+    "cloud",
+    "storage",
+    "api"
+  ],
   "author": "Akash Madan",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
