--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ MONGO_URI=mongodb://127.0.0.1:27017/cloudo_storix
 
 # Environment
 NODE_ENV=development
+
+#JWT Secret
+JWT_SECRET=your_jwt_secret_key
